chore(gitignore): add KB Labs Mind artifacts to gitignore
- Add .kb/mind/ to gitignore to exclude autogenerated artifacts
- Prevents committing index files, API indexes, dependency graphs, and context packs
- These files are regenerated automatically and are environment-specific
- Follows standard practice for autogenerated build artifacts

--- a/.gitignore
+++ b/.gitignore
@@ -65,5 +65,10 @@ analytics/
 *.sqlite
 *.db
 
+# ───────────────
+# KB Labs Mind artifacts
+# ───────────────
+.kb/mind/
+
 # DevKit provenance
 kb-labs/DEVKIT_SYNC.json
