feat: Implement CLI adapters for plugin system
🧠 Mind CLI Adapters:
- Create unified CommandModule type definition
- Implement all CLI adapters (init, pack, update, feed) with template pattern
- Add proper flag parsing with defaults (cwd, force, output, dry-run, source)
- Handle JSON output and error responses consistently

🔧 Manifest Updates:
- Clean manifest: remove process.cwd() defaults, use undefined
- Update requires arrays to reflect actual dependencies
- Ensure all loaders use .js extension for ESM compatibility
- Pure data structure (no runtime computations)

📦 Package Configuration:
- Add './dist/*' exports for CLI module imports
- Update tsup config to explicitly include all CLI adapter files
- Ensure ESM build compatibility

✅ Plugin System Ready:
- Commands ready for kb mind init/pack/update/feed
- Proper error handling and structured responses
- Compatible with plugin discovery system
- Lazy evaluation pipeline support

🚀 Next Steps:
- Commands will be available after kb devlink apply
- All dependencies properly declared
- Ready for production use

--- a/packages/mind-core/package.json
+++ b/packages/mind-core/package.json
@@ -10,7 +10,11 @@
     ".": {
       "import": "./dist/index.js",
       "types": "./dist/index.d.ts"
-    }
+    },
+    "./dist/*": "./dist/*"
+  },
+  "kb": {
+    "commandsManifest": "./dist/cli.manifest.js"
   },
   "files": [
     "dist",
