--- a/packages/mind-core/package.json
+++ b/packages/mind-core/package.json
@@ -39,6 +39,9 @@
     "typescript": "^5.6.3",
     "vitest": "^3.2.4"
   },
+  "dependencies": {
+    "@kb-labs/shared-cli-ui": "workspace:*"
+  },
   "engines": {
     "node": ">=20.0.0",
     "pnpm": ">=9.0.0"
