feat: enhance indexing with AI-oriented features and checksums
Core improvements:
- Add indexChecksum field to MindIndex for integrity verification
- Implement AI-oriented dependency indexing with priority/weight fields
- Add relevance scoring and context for impact queries
- Enhance monorepo support with workspace package scanning
- Add graph summary with hotspots and external dependencies

Indexer enhancements:
- Add docs indexer for documentation extraction
- Add meta indexer for package metadata
- Implement edge priority computation (critical/important/normal/noise)
- Add graph summary computation with statistics
- Persist deps.json with enhanced dependency data

Pack improvements:
- Add smart truncation based on priority
- Enhance context generation for AI consumption
- Improve token economy with priority-based filtering

This establishes the foundation for AI-oriented code analysis with:
- Deterministic, priority-based dependency analysis
- Enhanced context generation for LLM consumption
- Comprehensive integrity verification with checksums

--- a/packages/mind-adapters/tsconfig.json
+++ b/packages/mind-adapters/tsconfig.json
@@ -1,9 +1,9 @@
 {
-  "extends": "@kb-labs/devkit/tsconfig/lib.json",
+  "extends": "@kb-labs/devkit/tsconfig/node.json",
+  "include": [
+    "src"
+  ],
   "compilerOptions": {
-    "outDir": "dist",
-    "rootDir": "src"
-  },
-  "include": ["src/**/*"],
-  "exclude": ["dist", "node_modules"]
+    "noEmit": true
+  }
 }
