--- a/packages/mind-adapters/package.json
+++ b/packages/mind-adapters/package.json
@@ -33,6 +33,7 @@
   },
   "devDependencies": {
     "@kb-labs/devkit": "github:KirillBaranov/kb-labs-devkit#main",
+    "@types/node": "^24.7.0",
     "rimraf": "^6.0.1",
     "tsup": "^8.5.0",
     "typescript": "^5.6.3",
