chore: update project configuration for Mind V1
- Update package.json with new workspace packages
- Update pnpm-lock.yaml with new dependencies
- Update tsconfig.json for new package structure
- Update .gitignore for test coverage and build artifacts
- Update README.md with V1 architecture overview

Configuration changes:
- Add workspace references to new Mind packages
- Update TypeScript configuration for monorepo structure
- Add coverage and build artifact exclusions
- Document V1 architecture and usage

--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,11 @@ analytics/
 
 # DevKit provenance
 kb-labs/DEVKIT_SYNC.json
+
+# ───────────────
+# Temporary files
+# ───────────────
+*.timestamp-*.mjs
+yalc.lock
+yalc.sig
+.yalc/
