--- a/packages/mind-cli/package.json
+++ b/packages/mind-cli/package.json
@@ -38,7 +38,9 @@
     "@kb-labs/mind-pack": "link:../mind-pack",
     "@kb-labs/mind-query": "link:../mind-query",
     "@kb-labs/mind-types": "link:../mind-types",
-    "@kb-labs/shared-cli-ui": "link:../../../kb-labs-shared/packages/cli-ui"
+    "@kb-labs/shared-cli-ui": "link:../../../kb-labs-shared/packages/cli-ui",
+    "@kb-labs/tox-adapters": "link:../../../kb-labs-tox/packages/tox-adapters",
+    "@kb-labs/tox-codec-json": "link:../../../kb-labs-tox/packages/tox-codec-json"
   },
   "devDependencies": {
     "@kb-labs/devkit": "github:KirillBaranov/kb-labs-devkit#main",
