--- a/packages/mind-adapters/package.json
+++ b/packages/mind-adapters/package.json
@@ -32,7 +32,7 @@
     "@kb-labs/mind-core": "workspace:*"
   },
   "devDependencies": {
-    "@kb-labs/devkit": "github:KirillBaranov/kb-labs-devkit#main",
+    "@kb-labs/devkit": "workspace:*",
     "@types/node": "^24.7.0",
     "rimraf": "^6.0.1",
     "tsup": "^8.5.0",
