--- a/packages/mind-types/package.json
+++ b/packages/mind-types/package.json
@@ -30,7 +30,7 @@
     "test:watch": "echo 'Types package - no tests needed'"
   },
   "devDependencies": {
-    "@kb-labs/devkit": "github:KirillBaranov/kb-labs-devkit#main",
+    "@kb-labs/devkit": "workspace:*",
     "rimraf": "^6.0.1",
     "tsup": "^8.5.0",
     "typescript": "^5.6.3",
