--- a/packages/mind-adapters/package.json
+++ b/packages/mind-adapters/package.json
@@ -29,10 +29,10 @@
     "test:watch": "vitest"
   },
   "dependencies": {
-    "@kb-labs/mind-core": "workspace:*"
+    "@kb-labs/mind-core": "link:../mind-core"
   },
   "devDependencies": {
-    "@kb-labs/devkit": "workspace:*",
+    "@kb-labs/devkit": "link:../../../kb-labs-devkit",
     "@types/node": "^24.7.0",
     "rimraf": "^6.0.1",
     "tsup": "^8.5.0",
