--- a/packages/mind-gateway/package.json
+++ b/packages/mind-gateway/package.json
@@ -12,14 +12,14 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
-    "@kb-labs/mind-cli": "workspace:*",
-    "@kb-labs/mind-core": "workspace:*",
-    "@kb-labs/mind-indexer": "workspace:*",
-    "@kb-labs/mind-query": "workspace:*",
-    "@kb-labs/mind-types": "workspace:*"
+    "@kb-labs/mind-cli": "link:../mind-cli",
+    "@kb-labs/mind-core": "link:../mind-core",
+    "@kb-labs/mind-indexer": "link:../mind-indexer",
+    "@kb-labs/mind-query": "link:../mind-query",
+    "@kb-labs/mind-types": "link:../mind-types"
   },
   "devDependencies": {
-    "@kb-labs/devkit": "workspace:*",
+    "@kb-labs/devkit": "link:../../../kb-labs-devkit",
     "@types/node": "^20.0.0",
     "rimraf": "^6",
     "tsup": "^8",
