--- a/packages/mind-pack/package.json
+++ b/packages/mind-pack/package.json
@@ -29,11 +29,11 @@
     "test:watch": "vitest"
   },
   "dependencies": {
-    "@kb-labs/mind-core": "workspace:*",
-    "@kb-labs/mind-types": "workspace:*"
+    "@kb-labs/mind-core": "link:../mind-core",
+    "@kb-labs/mind-types": "link:../mind-types"
   },
   "devDependencies": {
-    "@kb-labs/devkit": "workspace:*",
+    "@kb-labs/devkit": "link:../../../kb-labs-devkit",
     "@types/node": "^24.7.0",
     "rimraf": "^6.0.1",
     "tsup": "^8.5.0",
