chore(mind-query): migrate to devkit config preset
Migrate tsup config to use devkit preset. Add @kb-labs/devkit to
devDependencies for consistent build configuration.

--- a/packages/mind-query/package.json
+++ b/packages/mind-query/package.json
@@ -23,6 +23,7 @@
     "@kb-labs/mind-types": "link:../mind-types"
   },
   "devDependencies": {
+    "@kb-labs/devkit": "link:../../../kb-labs-devkit",
     "@types/node": "^20",
     "tsup": "^8",
     "typescript": "^5",
