--- a/packages/mind-cli/package.json
+++ b/packages/mind-cli/package.json
@@ -11,10 +11,18 @@
       "import": "./dist/index.js",
       "types": "./dist/index.d.ts"
     },
+    "./studio/widgets/query-widget": {
+      "import": "./dist/studio/widgets/query-widget.js",
+      "types": "./dist/studio/widgets/query-widget.d.ts"
+    },
+    "./studio/widgets/verify-widget": {
+      "import": "./dist/studio/widgets/verify-widget.js",
+      "types": "./dist/studio/widgets/verify-widget.d.ts"
+    },
     "./dist/*": "./dist/*"
   },
   "kb": {
-    "commandsManifest": "./dist/cli.manifest.js"
+    "manifest": "./dist/manifest.v2.js"
   },
   "files": [
     "dist",
@@ -35,16 +43,23 @@
   "dependencies": {
     "@byjohann/toon": "0.4.0",
     "@kb-labs/analytics-sdk-node": "link:../../../kb-labs-analytics/packages/analytics-sdk-node",
+    "@kb-labs/plugin-manifest": "link:../../../kb-labs-plugin/packages/manifest",
+    "@kb-labs/plugin-adapter-studio": "link:../../../kb-labs-plugin/packages/adapters/studio",
+    "@kb-labs/mind-gateway": "link:../mind-gateway",
     "@kb-labs/mind-core": "link:../mind-core",
     "@kb-labs/mind-indexer": "link:../mind-indexer",
     "@kb-labs/mind-pack": "link:../mind-pack",
     "@kb-labs/mind-query": "link:../mind-query",
     "@kb-labs/mind-types": "link:../mind-types",
-    "@kb-labs/shared-cli-ui": "link:../../../kb-labs-shared/packages/cli-ui"
+    "@kb-labs/shared-cli-ui": "link:../../../kb-labs-shared/packages/cli-ui",
+    "@tanstack/react-query": "^5.0.0",
+    "react": "^18.0.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@kb-labs/devkit": "link:../../../kb-labs-devkit",
     "@types/node": "^24.7.0",
+    "@types/react": "^18.3.18",
     "rimraf": "^6.0.1",
     "tsup": "^8.5.0",
     "typescript": "^5.6.3",
