feat(cli): adopt layered architecture

--- a/packages/mind-cli/package.json
+++ b/packages/mind-cli/package.json
@@ -47,15 +47,23 @@
     "@kb-labs/core": "link:../../../kb-labs-core",
     "@kb-labs/plugin-manifest": "link:../../../kb-labs-plugin/packages/manifest",
     "@kb-labs/plugin-adapter-studio": "link:../../../kb-labs-plugin/packages/adapters/studio",
+    "@kb-labs/mind-contracts": "link:../contracts",
     "@kb-labs/mind-gateway": "link:../mind-gateway",
     "@kb-labs/mind-core": "link:../mind-core",
     "@kb-labs/mind-indexer": "link:../mind-indexer",
     "@kb-labs/mind-pack": "link:../mind-pack",
     "@kb-labs/mind-query": "link:../mind-query",
     "@kb-labs/mind-types": "link:../mind-types",
+    "@kb-labs/profile-schemas": "link:../../../kb-labs-profile-schemas/packages/profile-schemas",
     "@kb-labs/shared-cli-ui": "link:../../../kb-labs-shared/packages/cli-ui",
     "@tanstack/react-query": "^5.0.0",
+    "@aws-sdk/client-s3": "^3.929.0",
+    "ajv": "^8.17.1",
+    "ajv-formats": "^3.0.1",
+    "glob": "^11.0.0",
     "react": "^18.0.0",
+    "uuidv7": "^1.0.0",
+    "yaml": "^2.8.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
