--- a/packages/mind-cli/tsconfig.json
+++ b/packages/mind-cli/tsconfig.json
@@ -1,10 +1,29 @@
 {
-  "extends": "@kb-labs/devkit/tsconfig/node.json",
-  "include": [
-    "src"
-  ],
+  "$schema": "https://json.schemastore.org/tsconfig",
+  "extends": "../../tsconfig.base.json",
   "compilerOptions": {
     "noEmit": true,
-    "jsx": "react-jsx"
-  }
+    "rootDir": "src",
+    "jsx": "react-jsx",
+    "paths": {
+      "@app/shared": ["src/shared/index.ts"],
+      "@app/shared/*": ["src/shared/*"],
+      "@app/domain": ["src/domain/index.ts"],
+      "@app/domain/*": ["src/domain/*"],
+      "@app/application": ["src/application/index.ts"],
+      "@app/application/*": ["src/application/*"],
+      "@app/rest": ["src/rest/index.ts"],
+      "@app/rest/*": ["src/rest/*"],
+      "@app/infra": ["src/infra/index.ts"],
+      "@app/infra/*": ["src/infra/*"],
+      "@app/studio": ["src/studio/index.ts"],
+      "@app/studio/*": ["src/studio/*"],
+      "@app/cli": ["src/cli/index.ts"],
+      "@app/cli/*": ["src/cli/*"],
+      "@kb-labs/mind-contracts": ["../contracts/src/index.ts"],
+      "@kb-labs/mind-contracts/*": ["../contracts/src/*"]
+    }
+  },
+  "include": ["src"],
+  "exclude": ["src/__tests__/**"]
 }
