chore(cli): update dependencies and configuration
Update mind-cli package:

- Add dependencies for Mind v2 engine and knowledge packages
- Update TypeScript configuration
- Update tsup build configuration
- Update CLI entry points and manifest
- Add README documentation

These changes support the integration of Mind v2 knowledge engine.

--- a/packages/mind-cli/package.json
+++ b/packages/mind-cli/package.json
@@ -50,12 +50,17 @@
     "@kb-labs/mind-contracts": "link:../contracts",
     "@kb-labs/mind-gateway": "link:../mind-gateway",
     "@kb-labs/mind-core": "link:../mind-core",
+    "@kb-labs/mind-engine": "link:../mind-engine",
+    "@kb-labs/mind-embeddings": "link:../mind-embeddings",
+    "@kb-labs/mind-llm": "link:../mind-llm",
+    "@kb-labs/mind-vector-store": "link:../mind-vector-store",
     "@kb-labs/mind-indexer": "link:../mind-indexer",
     "@kb-labs/mind-pack": "link:../mind-pack",
     "@kb-labs/mind-query": "link:../mind-query",
     "@kb-labs/mind-types": "link:../mind-types",
-    "@kb-labs/profile-schemas": "link:../../../kb-labs-profile-schemas/packages/profile-schemas",
     "@kb-labs/shared-cli-ui": "link:../../../kb-labs-shared/packages/cli-ui",
+    "@kb-labs/knowledge-contracts": "link:../../../kb-labs-knowledge/packages/knowledge-contracts",
+    "@kb-labs/knowledge-core": "link:../../../kb-labs-knowledge/packages/knowledge-core",
     "@tanstack/react-query": "^5.0.0",
     "@aws-sdk/client-s3": "^3.929.0",
     "ajv": "^8.17.1",
