--- a/packages/mind-cli/tsconfig.json
+++ b/packages/mind-cli/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "$schema": "https://json.schemastore.org/tsconfig",
-  "extends": "../../tsconfig.base.json",
+  "extends": ["../../tsconfig.base.json", "../../tsconfig.paths.json"],
   "compilerOptions": {
     "noEmit": true,
     "rootDir": "src",
