chore(fixtures): update test fixtures
Update test fixtures:

- Update package.json files for fixtures
- Add README files for small and medium project fixtures
- Add tsconfig.json for small-project fixture

These updates keep fixtures aligned with Mind v2 changes.

--- a/fixtures/small-project/package.json
+++ b/fixtures/small-project/package.json
@@ -1,11 +1,14 @@
 {
   "name": "sample-project",
   "version": "1.0.0",
+  "description": "Sample project fixture for testing Mind indexing functionality",
   "type": "module",
   "main": "src/index.ts",
   "scripts": {
     "build": "tsc",
-    "test": "vitest"
+    "test": "vitest",
+    "lint": "eslint . --ignore-pattern 'dist/**'",
+    "lint:fix": "eslint . --fix --ignore-pattern 'dist/**'"
   },
   "dependencies": {
     "lodash": "^4.17.21"
