--- a/fixtures/medium-project/package.json
+++ b/fixtures/medium-project/package.json
@@ -7,7 +7,9 @@
   "scripts": {
     "build": "tsc",
     "test": "vitest run",
-    "dev": "tsc --watch"
+    "dev": "tsc --watch",
+    "lint": "eslint . --ignore-pattern 'dist/**'",
+    "lint:fix": "eslint . --fix --ignore-pattern 'dist/**'"
   },
   "dependencies": {
     "lodash": "^4.17.21",
