chore(config): update package configurations
Update package.json and tsup.config.ts for:
- Contracts package
- Mind-adapters package
- Mind-CLI package
- Mind-core package
- Mind-embeddings package
- Mind-engine package
- Mind-gateway package
- Mind-indexer package
- Mind-LLM package

--- a/packages/mind-cli/package.json
+++ b/packages/mind-cli/package.json
@@ -11,6 +11,10 @@
       "import": "./dist/index.js",
       "types": "./dist/index.d.ts"
     },
+    "./application/sync": {
+      "import": "./dist/application/sync.js",
+      "types": "./dist/application/sync.d.ts"
+    },
     "./studio/widgets/query-widget": {
       "import": "./dist/studio/widgets/query-widget.js",
       "types": "./dist/studio/widgets/query-widget.d.ts"
@@ -45,6 +49,8 @@
     "@byjohann/toon": "0.4.0",
     "@kb-labs/analytics-sdk-node": "link:../../../kb-labs-analytics/packages/analytics-sdk-node",
     "@kb-labs/core": "link:../../../kb-labs-core",
+    "@kb-labs/core-sys": "link:../../../kb-labs-core/packages/sys",
+    "@kb-labs/sandbox": "link:../../../kb-labs-core/packages/sandbox",
     "@kb-labs/plugin-manifest": "link:../../../kb-labs-plugin/packages/manifest",
     "@kb-labs/plugin-adapter-studio": "link:../../../kb-labs-plugin/packages/adapters/studio",
     "@kb-labs/mind-contracts": "link:../contracts",
