--- a/packages/mind-engine/package.json
+++ b/packages/mind-engine/package.json
@@ -49,6 +49,12 @@
     "fs-extra": "^11.2.0",
     "openai": "^4.104.0",
     "picomatch": "^4.0.2",
+    "tree-sitter": "^0.21.1",
+    "tree-sitter-typescript": "^0.21.2",
+    "tree-sitter-javascript": "^0.21.4",
+    "tree-sitter-python": "^0.21.0",
+    "tree-sitter-go": "^0.21.1",
+    "tree-sitter-rust": "^0.21.0",
     "typescript": "^5.6.3"
   },
   "devDependencies": {
