docs(adr): add architecture decision records
- Add ADR for provider-agnostic rate limiting
- Add ADR for memory-aware parallel processing

chore(config): update project configuration

- Update kb.config.json
- Update TypeScript paths configuration

--- a/kb.config.json
+++ b/kb.config.json
@@ -5,7 +5,25 @@
         "id": "test-source",
         "type": "filesystem",
         "kind": "code",
-        "paths": ["."]
+        "paths": [
+          "packages/**/*.{ts,tsx,js,jsx}",
+          "src/**/*.{ts,tsx,js,jsx}"
+        ],
+        "exclude": [
+          "**/node_modules/**",
+          "**/.git/**",
+          "**/dist/**",
+          "**/build/**",
+          "**/coverage/**",
+          "**/*.min.js",
+          "**/*.bundle.js",
+          "**/*.d.ts",
+          "**/__tests__/**",
+          "**/*.test.{ts,tsx,js,jsx}",
+          "**/*.spec.{ts,tsx,js,jsx}",
+          "**/fixtures/**",
+          "**/.ignored/**"
+        ]
       }
     ],
     "scopes": [
