--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -63,6 +63,12 @@
       "@kb-labs/analytics-cli/*": [
         "../kb-labs-analytics/packages/analytics-cli/src/*"
       ],
+      "@kb-labs/analytics-contracts": [
+        "../kb-labs-analytics/packages/analytics-contracts/src/index.ts"
+      ],
+      "@kb-labs/analytics-contracts/*": [
+        "../kb-labs-analytics/packages/analytics-contracts/src/*"
+      ],
       "@kb-labs/analytics-core": [
         "../kb-labs-analytics/packages/analytics-core/src/index.ts"
       ],
@@ -136,10 +142,10 @@
         "../kb-labs-cli/packages/commands/src/*"
       ],
       "@kb-labs/cli-core": [
-        "../kb-labs-cli/packages/core/src/index.ts"
+        "../kb-labs-cli/packages/cli-core/src/index.ts"
       ],
       "@kb-labs/cli-core/*": [
-        "../kb-labs-cli/packages/core/src/*"
+        "../kb-labs-cli/packages/cli-core/src/*"
       ],
       "@kb-labs/cli-runtime": [
         "../kb-labs-cli/packages/cli-runtime/src/index.ts"
@@ -173,6 +179,12 @@
       ],
       "@kb-labs/core-config/*": [
         "../kb-labs-core/packages/config/src/*"
+      ],
+      "@kb-labs/core-contracts": [
+        "../kb-labs-core/packages/core-contracts/src/index.ts"
+      ],
+      "@kb-labs/core-contracts/*": [
+        "../kb-labs-core/packages/core-contracts/src/*"
       ],
       "@kb-labs/core-policy": [
         "../kb-labs-core/packages/policy/src/index.ts"
@@ -381,6 +393,12 @@
       "@kb-labs/plugin-template-contracts/*": [
         "../kb-labs-plugin-template/packages/contracts/src/*"
       ],
+      "@kb-labs/plugin-testing": [
+        "../kb-labs-plugin/packages/testing/src/index.ts"
+      ],
+      "@kb-labs/plugin-testing/*": [
+        "../kb-labs-plugin/packages/testing/src/*"
+      ],
       "@kb-labs/profile-toolkit": [
         "../kb-labs-core/packages/profile-toolkit/src/index.ts"
       ],
@@ -398,6 +416,12 @@
       ],
       "@kb-labs/release-cli/*": [
         "../kb-labs-release-manager/packages/release-cli/src/*"
+      ],
+      "@kb-labs/release-contracts": [
+        "../kb-labs-release-manager/packages/release-contracts/src/index.ts"
+      ],
+      "@kb-labs/release-contracts/*": [
+        "../kb-labs-release-manager/packages/release-contracts/src/*"
       ],
       "@kb-labs/release-core": [
         "../kb-labs-release-manager/packages/release-core/src/index.ts"
