--- a/packages/mind-engine/package.json
+++ b/packages/mind-engine/package.json
@@ -37,6 +37,7 @@
     "test:watch": "vitest --passWithNoTests"
   },
   "dependencies": {
+    "@kb-labs/core-sys": "link:../../../kb-labs-core/packages/sys",
     "@kb-labs/knowledge-contracts": "link:../../../kb-labs-knowledge/packages/knowledge-contracts",
     "@kb-labs/knowledge-core": "link:../../../kb-labs-knowledge/packages/knowledge-core",
     "@kb-labs/mind-core": "link:../mind-core",
