--- a/packages/mind-indexer/package.json
+++ b/packages/mind-indexer/package.json
@@ -29,6 +29,7 @@
     "test:watch": "vitest"
   },
   "dependencies": {
+    "@kb-labs/core-sys": "link:../../../kb-labs-core/packages/sys",
     "@kb-labs/mind-adapters": "link:../mind-adapters",
     "@kb-labs/mind-core": "link:../mind-core",
     "@kb-labs/mind-types": "link:../mind-types",
