--- a/packages/mind-orchestrator/package.json
+++ b/packages/mind-orchestrator/package.json
@@ -30,6 +30,7 @@
   },
   "dependencies": {
     "@kb-labs/analytics-sdk-node": "link:../../../kb-labs-analytics/packages/analytics-sdk-node",
+    "@kb-labs/core-sys": "link:../../../kb-labs-core/packages/sys",
     "@kb-labs/knowledge-contracts": "link:../../../kb-labs-knowledge/packages/knowledge-contracts",
     "@kb-labs/mind-core": "link:../mind-core",
     "@kb-labs/mind-engine": "link:../mind-engine",
