--- a/packages/mind-cli/package.json
+++ b/packages/mind-cli/package.json
@@ -47,42 +47,31 @@
   },
   "dependencies": {
     "@byjohann/toon": "0.4.0",
-    "@kb-labs/analytics-sdk-node": "link:../../../kb-labs-analytics/packages/analytics-sdk-node",
     "@kb-labs/core": "link:../../../kb-labs-core",
-    "@kb-labs/core-sys": "link:../../../kb-labs-core/packages/sys",
-    "@kb-labs/sandbox": "link:../../../kb-labs-core/packages/sandbox",
+    "@kb-labs/core-sys": "link:../../../kb-labs-core/packages/core-sys",
+    "@kb-labs/core-sandbox": "link:../../../kb-labs-core/packages/core-sandbox",
     "@kb-labs/plugin-manifest": "link:../../../kb-labs-plugin/packages/manifest",
-    "@kb-labs/plugin-adapter-studio": "link:../../../kb-labs-plugin/packages/adapters/studio",
     "@kb-labs/mind-contracts": "link:../contracts",
     "@kb-labs/mind-gateway": "link:../mind-gateway",
     "@kb-labs/mind-core": "link:../mind-core",
     "@kb-labs/mind-engine": "link:../mind-engine",
-    "@kb-labs/mind-embeddings": "link:../mind-embeddings",
     "@kb-labs/mind-llm": "link:../mind-llm",
-    "@kb-labs/mind-vector-store": "link:../mind-vector-store",
     "@kb-labs/mind-indexer": "link:../mind-indexer",
     "@kb-labs/mind-pack": "link:../mind-pack",
     "@kb-labs/mind-orchestrator": "link:../mind-orchestrator",
     "@kb-labs/mind-query": "link:../mind-query",
     "@kb-labs/mind-types": "link:../mind-types",
     "@kb-labs/shared-cli-ui": "link:../../../kb-labs-shared/packages/cli-ui",
-    "@kb-labs/cli-command-kit": "workspace:*",
+    "@kb-labs/shared-command-kit": "workspace:*",
     "@kb-labs/knowledge-contracts": "link:../../../kb-labs-knowledge/packages/knowledge-contracts",
     "@kb-labs/knowledge-core": "link:../../../kb-labs-knowledge/packages/knowledge-core",
-    "@tanstack/react-query": "^5.0.0",
-    "@aws-sdk/client-s3": "^3.929.0",
-    "ajv": "^8.17.1",
-    "ajv-formats": "^3.0.1",
-    "glob": "^11.0.0",
-    "react": "^18.0.0",
-    "uuidv7": "^1.0.0",
-    "yaml": "^2.8.0",
+    "react": "^18.3.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@kb-labs/devkit": "link:../../../kb-labs-devkit",
-    "@types/node": "^24.7.0",
-    "@types/react": "^18.3.18",
+    "@types/node": "^24.3.3",
+    "@types/react": "^18.3.8",
     "rimraf": "^6.0.1",
     "tsup": "^8.5.0",
     "typescript": "^5.6.3",
