chore(mind): update package configurations
- Update mind-cli and mind-core package.json
- Update TypeScript configuration
- Update TypeScript paths and tsup external configuration

--- a/packages/mind-cli/package.json
+++ b/packages/mind-cli/package.json
@@ -50,8 +50,8 @@
     "@kb-labs/core": "link:../../../kb-labs-core",
     "@kb-labs/core-sys": "link:../../../kb-labs-core/packages/core-sys",
     "@kb-labs/core-sandbox": "link:../../../kb-labs-core/packages/core-sandbox",
-    "@kb-labs/plugin-manifest": "link:../../../kb-labs-plugin/packages/manifest",
-    "@kb-labs/mind-contracts": "link:../contracts",
+    "@kb-labs/plugin-manifest": "link:../../../kb-labs-plugin/packages/plugin-manifest",
+    "@kb-labs/mind-contracts": "link:../mind-contracts",
     "@kb-labs/mind-gateway": "link:../mind-gateway",
     "@kb-labs/mind-core": "link:../mind-core",
     "@kb-labs/mind-engine": "link:../mind-engine",
@@ -61,11 +61,11 @@
     "@kb-labs/mind-orchestrator": "link:../mind-orchestrator",
     "@kb-labs/mind-query": "link:../mind-query",
     "@kb-labs/mind-types": "link:../mind-types",
-    "@kb-labs/shared-cli-ui": "link:../../../kb-labs-shared/packages/cli-ui",
-    "@kb-labs/shared-command-kit": "workspace:*",
+    "@kb-labs/shared-cli-ui": "link:../../../kb-labs-shared/packages/shared-cli-ui",
+    "@kb-labs/shared-command-kit": "link:../../../kb-labs-shared/packages/shared-command-kit",
     "@kb-labs/knowledge-contracts": "link:../../../kb-labs-knowledge/packages/knowledge-contracts",
     "@kb-labs/knowledge-core": "link:../../../kb-labs-knowledge/packages/knowledge-core",
-    "react": "^18.3.0",
+    "react": "^18.3.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
