--- a/packages/mind-core/package.json
+++ b/packages/mind-core/package.json
@@ -37,7 +37,9 @@
     "typescript": "^5.6.3",
     "vitest": "^3.2.4"
   },
-  "dependencies": {},
+  "dependencies": {
+    "@kb-labs/mind-types": "workspace:*"
+  },
   "engines": {
     "node": ">=20.0.0",
     "pnpm": ">=9.0.0"
