--- a/packages/mind-gateway/package.json
+++ b/packages/mind-gateway/package.json
@@ -17,8 +17,7 @@
   "dependencies": {
     "@kb-labs/mind-cli": "workspace:*",
     "@kb-labs/mind-core": "link:../mind-core",
-    "@kb-labs/mind-indexer": "link:../mind-indexer",
-    "@kb-labs/mind-query": "link:../mind-query"
+    "@kb-labs/mind-indexer": "link:../mind-indexer"
   },
   "devDependencies": {
     "@kb-labs/devkit": "link:../../../kb-labs-devkit",
