feat(cli): update RAG commands with configurable types

--- a/packages/mind-contracts/package.json
+++ b/packages/mind-contracts/package.json
@@ -39,6 +39,7 @@
     "test:watch": "vitest"
   },
   "dependencies": {
+    "@kb-labs/knowledge-contracts": "link:../../../kb-labs-knowledge/packages/knowledge-contracts",
     "zod": "^3.23.8"
   },
   "devDependencies": {
