feat(engine): improve markdown chunking and platform vector store
- Adjust chunking, incremental builder, and platform vector store
- Update learning stores and index wiring
- Refresh lockfile and path aliases

--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -18,6 +18,12 @@
       "@kb-labs/core-platform/*": [
         "../kb-labs-core/packages/core-platform/src/*"
       ],
+      "@kb-labs/core-runtime": [
+        "../kb-labs-core/packages/core-runtime/src/index.ts"
+      ],
+      "@kb-labs/core-runtime/*": [
+        "../kb-labs-core/packages/core-runtime/src/*"
+      ],
       "@kb-labs/core-sandbox": [
         "../kb-labs-core/packages/core-sandbox/src/index.ts"
       ],
